Revision history for MUGS-UI-CLI

0.1.3  *WIP*
  [Contacting us]
  - Move official IRC support channel from Freenode to Libera.Chat

  [Testing]
  - Run GitHub test workflow against MUGS-Core/Games HEAD rather than previous release


0.1.2  2021-05-13
  [CBOR transition]
  - Most changes this release are trivial changes to support the overall
    transition of MUGS to CBOR network message serialization; more details
    in the MUGS-Core Changes doc

  [Bug fixes]
  - MUGS::UI::CLI::Input now works correctly with more terminal types
    (previously, could hang after displaying prompt on some terminals)


0.1.1  2021-04-15
  [Bug fixes]
  - De-clever-ize session connect, which was giving LTA connection errors
  - Fix ^U to default binding delete-to-start (instead of delete-line)

  [App]
  - Simplify MAIN multi, allowing user to specify an arbitrary game-type
  - Add additional UI output helper methods

  [Games]
  - Add TicTacToe game (a trivial MNKGame)

  [Genres]
  - Refactor/unify behavior of turn validation, submission, and error handling
  - Add simple BoardGame and MNKGame genres
  - Make MNKGame aware of start player (and thus who gets which marks)
  - Support per-participant winloss status

  [Input]
  - Refactoring
    - MUGS::UI::CLI::Input loop
    - Special key binding handling
    - Delete-related edit code
  - Support new features/bindings
    - abort-or-delete (used for ^D)
    - literal-next (used for ^V)
    - yank (used for ^Y) with a single-level cut/yank buffer
    - suspend (used for ^Z) including proper continue refresh handling

  [UI/UX]
  - Stub game-help as needed for all game UIs
  - Special handling for NotStarted in play loop and when asking for help
  - Better handling of game-leave, especially avoiding leaving lobby when
    other game UIs remain active
  - Show active game list in lobby at start and in lobby help
  - Support using /game <id> to join games as well as switch to them